--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
 asgiref==3.11.1
+click==8.3.1
+colorama==0.4.6
+cssbeautifier==1.15.4
 dj-database-url==3.1.0
 Django==6.0.2
 django-fullurl==1.4
 django-tinymce==5.0.0
+djlint==1.36.4
 dotenv==0.9.9
+EditorConfig==0.17.1
 gitdb==4.0.12
 GitPython==3.1.41
+jsbeautifier==1.15.4
+json5==0.13.0
+pathspec==1.0.4
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
+PyYAML==6.0.3
+regex==2026.1.15
 setuptools==78.1.1
+six==1.17.0
 smmap==5.0.2
 sqlparse==0.5.5
+tqdm==4.67.3
 tzdata==2025.3
 whitenoise==6.11.0
