--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ dotenv==0.9.9
 EditorConfig==0.17.1
 gitdb==4.0.12
 GitPython==3.1.41
+gunicorn==25.1.0
 jsbeautifier==1.15.4
 json5==0.13.0
+packaging==26.0
 pathspec==1.0.4
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
